# ByteChess

./: .gitignore  Byte v1.sln  Cargo.toml  ENGINE_WRITEUP.md  README.md
Byte v1/: Byte v1.csproj  Main.cs
src/: board.rs  byte.rs  magic.rs  parse.rs  table.rs  tuner.rs  tunereval.rs  util.rs  zobrist.rs
