[package]
name = "bytechess"
version = "0.1.0"
description = "A lightweight Rust chess engine."
license = "MIT"
autobins = false
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.1"
rayon = "1.7"
strum = "0.27.1"
strum_macros = "0.27.1"

[[bin]]
name = "bytechess"
path = "src/byte.rs"
